src/snapshots/loco_rs__scheduler__tests__can_display_scheduler.snap
---
source: src/scheduler.rs
expression: "format!(\"{scheduler}\")"
---
"#      job_name        cron               tags               run\n1      print_task      */5 * * * * *      base, echo         \"foo\"\n2      write_to_file   */5 * * * * *      base, write        \"echo loco >> ./scheduler.txt\"\n"
