src/snapshots/loco_rs__scheduler__tests__can_prepare_command_[shell].snap
---
source: src/scheduler.rs
expression: prepare_command
---
JobDescription {
    command: "echo loco",
    output: STDOUT,
    environment: Test,
}
