src/snapshots/loco_rs__scheduler__tests__can_prepare_command_[task].snap
---
source: src/scheduler.rs
expression: prepare_command
---
JobDescription {
    command: "[BIN_PATH] task foo LOCO_ENV:test SCHEDULER:true",
    output: STDOUT,
    environment: Test,
}
